--- a/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
@@ -6,13 +6,13 @@
                 xmlns:pe="http://primefaces.org/ui/extensions"
                 template="/view/templ/templ.xhtml">
 
-    <ui:param name="_frm" value="#{_bean.itemObjName}"/>
+    <ui:param name="_frm" value="#{_bean.getFormName()}"/>
 
     <ui:insert name="scripts" />     
 
     <ui:define name="preRendered">
         <f:metadata>
-            <f:event type="preRenderView" listener="#{_bean.onOpenCard()}"/>
+            <f:event type="preRenderView" listener="#{_bean.onBeforeOpenCard()}"/>
         </f:metadata>
     </ui:define>
 
