--- a/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-explorer.xhtml
@@ -4,7 +4,8 @@
                 template="/view/templ/templ-explorer.xhtml">
 
     <!-- стандартный обозреватель/селектор -->
-    
+
+    <ui:param name="_explorerBean" value="#{explorerTreeBean}" />
     <ui:param name="_treeBean" value="#{docTypeGroupsBean}" />   
     <ui:param name="_detailBean" value="#{docTypeBean}" /> 
     <ui:param name="_searcheBean" value="#{docTypeBean}"/>
