--- a/escom-bpm-web/src/main/webapp/view/users/user-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/user-explorer.xhtml
@@ -4,6 +4,7 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui">
 
+    <ui:param name="_explorerBean" value="#{explorerTreeBean}" />
     <ui:param name="_detailBean"  value="#{userBean}"/>
     <ui:param name="_treeBean"    value="#{userGroupsBean}"/>
     <ui:param name="_searcheBean" value="#{userBean}"/>
