--- a/escom-bpm-web/src/main/webapp/view/docs/docStatus/statusesdoc-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/docStatus/statusesdoc-explorer.xhtml
@@ -1,11 +1,10 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="/view/templ/templ-explorer.xhtml"
-                xmlns:p="http://primefaces.org/ui"
-                xmlns:h="http://xmlns.jcp.org/jsf/html">
+                template="/view/templ/templ-explorer.xhtml">
 
     <!-- стандартный обозреватель/селектор для Статусов документов -->
-    
+
+    <ui:param name="_explorerBean" value="#{explorerBean}" />
     <ui:param name="_detailBean"  value="#{statusesDocBean}" />
     <ui:param name="_searcheBean" value="#{statusesDocBean}"/>
     
