--- a/escom-bpm-web/src/main/webapp/view/folders/folder-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/folders/folder-explorer.xhtml
@@ -3,7 +3,8 @@
                 template="/view/templ/templ-explorer.xhtml">
 
     <!-- используется в качестве селектора папок -->
-    
+
+    <ui:param name="_explorerBean" value="#{folderExplBean}" />
     <ui:param name="_treeBean" value="#{foldersBean}" />
     <ui:param name="_detailBean" value="#{docsBean}" />
     <ui:param name="_searcheBean" value="#{_treeBean}"/>
