--- a/escom-bpm-web/src/main/webapp/view/partners/groups/partnergroup-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/groups/partnergroup-explorer.xhtml
@@ -3,7 +3,8 @@
                 template="/view/templ/templ-explorer.xhtml">
 
     <!-- используется в качестве селектора групп контрагентов -->
-    
+
+    <ui:param name="_explorerBean" value="#{explorerTreeBean}" />
     <ui:param name="_treeBean" value="#{partnersGroupsBean}" />
     <ui:param name="_detailBean" value="#{partnersBean}" />
     <ui:param name="_searcheBean" value="#{_treeBean}"/>
