--- a/escom-bpm-web/src/main/webapp/view/partners/partner-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/partner-explorer.xhtml
@@ -4,6 +4,7 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 template="/view/templ/templ-explorer.xhtml">
 
+    <ui:param name="_explorerBean" value="#{explorerTreeBean}" />
     <ui:param name="_detailBean" value="#{partnersBean}" />
     <ui:param name="_treeBean" value="#{partnersGroupsBean}" /> 
     
