--- a/escom-bpm-web/src/main/webapp/view/partners/types/partnertype-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/types/partnertype-explorer.xhtml
@@ -1,11 +1,11 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 template="/view/templ/templ-explorer.xhtml"
-                xmlns:p="http://primefaces.org/ui"
-                xmlns:h="http://xmlns.jcp.org/jsf/html">
+                xmlns:p="http://primefaces.org/ui">
 
     <!-- стандарный обозреватель/селектор -->
-    
+
+    <ui:param name="_explorerBean" value="#{explorerBean}" />
     <ui:param name="_detailBean"  value="#{partnerTypesBean}"/>
     <ui:param name="_searcheBean" value="#{partnerTypesBean}"/>
     
