--- a/escom-bpm-web/src/main/webapp/view/index.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/index.xhtml
@@ -171,6 +171,10 @@
                                            onstart="return isClose = 1;"
                                            ajax="false"
                                            action="#{sessionBean.openProcessExpl()}"/>
+                            <p:commandLink value="#{bundle.MonitorConcorded}"
+                                           onstart="return isClose = 1;"
+                                           ajax="false"
+                                           action="#{sessionBean.openProcessExpl()}"/>
                         </p:panelGrid>
                     </p:panel>
 
