--- a/escom-bpm-web/src/main/webapp/view/admin/help/help-view.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/help/help-view.xhtml
@@ -20,7 +20,7 @@
     </ui:define>
 
     <ui:define name="centerFormContent">
-        <pe:documentViewer id="viewer" value="#{helpBean.content}" height="800" style="width: 100%; height=100%;"/>
+        <pe:documentViewer id="viewer" value="#{helpBean.content}" height="800" style="width: 100%;"/>
     </ui:define>
 
 </ui:composition>
